[tool.poetry]
name = "github_actions_poetry_check"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = ">=3.7.1, < 3.10.0"
pandas = "1.3.5"
google-cloud-bigquery = "2.31.0"
pyarrow = "5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
